[package]
name = "pipboy"
version = "0.1.0"
authors = ["Aayla Semyonova <aayla@aayla.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "~2.27.0", features = ["yaml"]}
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.57"
confy = "0.4.0"
substring = "1.4.5"
fstrings = "0.2.3"
tar = "0.4.33"
flate2 = "1.0.20"